--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>For My Bagguu ❤️</title>
+
 <style>
 body {
   margin: 0;
@@ -19,20 +20,20 @@ body {
 
 .card {
   background: rgba(255,255,255,0.15);
-  padding: 40px 30px;
+  padding: 35px 25px;
   border-radius: 25px;
-  max-width: 330px;
+  max-width: 350px;
   box-shadow: 0 15px 40px rgba(0,0,0,0.25);
   z-index: 2;
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 22px;
   line-height: 1.4;
 }
 
 button {
-  margin-top: 25px;
+  margin-top: 20px;
   padding: 12px 26px;
   border-radius: 30px;
   border: none;
@@ -47,8 +48,26 @@ button:hover {
   transform: scale(1.05);
 }
 
-.hidden {
-  display: none;
+.hidden { display: none; }
+
+/* Gallery */
+.gallery {
+  margin-top: 15px;
+}
+
+.gallery img {
+  width: 90px;
+  height: 110px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin: 5px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  animation: pop 0.6s ease;
+}
+
+@keyframes pop {
+  from { transform: scale(0); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
 }
 
 /* Hearts */
@@ -71,6 +90,15 @@ button:hover {
 
 <div class="card">
   <h1 id="text">Hey Bagguu 👀</h1>
+
+  <div id="gallery" class="gallery hidden">
+    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpg">
+    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpg">
+    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpg">
+    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpg">
+    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpg">
+    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpg">
+  </div>
 
   <button id="nextBtn" onclick="next()">Click here</button>
 
@@ -100,6 +128,7 @@ const messages = [
   "Because you mean more to me than you know",
   "You are my safe place, my comfort",
   "And my favorite person 🥺",
+  "Look at us 💞",
   "Bagguu, will you be my Valentine? ❤️"
 ];
 
@@ -110,6 +139,10 @@ function next() {
   if (!musicPlayed) {
     document.getElementById("music").play();
     musicPlayed = true;
+  }
+
+  if (i === 4) {
+    document.getElementById("gallery").classList.remove("hidden");
   }
 
   if (i < messages.length - 1) {
@@ -125,10 +158,11 @@ function next() {
 function yes() {
   document.getElementById("finalBtns").classList.add("hidden");
   document.getElementById("text").classList.add("hidden");
+  document.getElementById("gallery").classList.add("hidden");
   document.getElementById("hiddenMsg").classList.remove("hidden");
 }
 
-// Floating hearts
+/* Floating hearts */
 setInterval(() => {
   const heart = document.createElement("div");
   heart.className = "heart";
