--- a/index.html
+++ b/index.html
@@ -91,14 +91,15 @@ button:hover {
 <div class="card">
   <h1 id="text">Hey Bagguu 👀</h1>
 
-  <div id="gallery" class="gallery hidden">
-    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpg">
-    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpg">
-    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpg">
-    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpg">
-    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpg">
-    <img src="WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpg">
-  </div>
+<div id="gallery" class="gallery hidden">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpeg">
+</div>
+
 
   <button id="nextBtn" onclick="next()">Click here</button>
 
