--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
   background: rgba(255,255,255,0.15);
   padding: 35px 25px;
   border-radius: 25px;
-  max-width: 350px;
+  max-width: 360px;
   box-shadow: 0 15px 40px rgba(0,0,0,0.25);
   z-index: 2;
 }
@@ -34,27 +34,21 @@ h1 {
 
 button {
   margin-top: 20px;
-  padding: 12px 26px;
+  padding: 12px 22px;
   border-radius: 30px;
   border: none;
-  font-size: 16px;
+  font-size: 15px;
   cursor: pointer;
   background: #fff;
   color: #ff4f81;
   transition: 0.3s;
 }
 
-button:hover {
-  transform: scale(1.05);
-}
+button:hover { transform: scale(1.05); }
 
 .hidden { display: none; }
 
 /* Gallery */
-.gallery {
-  margin-top: 15px;
-}
-
 .gallery img {
   width: 90px;
   height: 110px;
@@ -62,12 +56,6 @@ button:hover {
   border-radius: 12px;
   margin: 5px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  animation: pop 0.6s ease;
-}
-
-@keyframes pop {
-  from { transform: scale(0); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
 }
 
 /* Hearts */
@@ -89,34 +77,30 @@ button:hover {
 <body>
 
 <div class="card">
+
   <h1 id="text">Hey Bagguu 👀</h1>
 
-<div id="gallery" class="gallery hidden">
-  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpeg">
-  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpeg">
-  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpeg">
-  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpeg">
-  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpeg">
-  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpeg">
-</div>
+  <!-- Gallery -->
+  <div id="gallery" class="hidden">
+    <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpeg">
+    <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpeg">
+    <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpeg">
+    <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpeg">
+    <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpeg">
+    <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpeg">
+  </div>
 
+  <!-- Valentine Question -->
+  <div id="valentineBox" class="hidden">
+    <h1>You are my Valentine 💘</h1>
+    <button onclick="valYes()">Hell Yess 😍</button>
+    <button onclick="valOnly()">Only if you get me sushi 🍣😌</button>
+  </div>
 
   <button id="nextBtn" onclick="next()">Click here</button>
 
-  <div id="finalBtns" class="hidden">
-    <button onclick="yes()">YES 💖</button>
-  </div>
+  <div id="hiddenMsg" class="hidden"></div>
 
-  <div id="hiddenMsg" class="hidden">
-    <h1>
-      It’s a date 🥺❤️<br><br>
-      our date is ..<br>
-      for the best sushi 🍣<br>
-      and best of me 💫<br><br>
-      Always yours,<br>
-      Ishani 💕
-    </h1>
-  </div>
 </div>
 
 <audio id="music">
@@ -129,8 +113,7 @@ const messages = [
   "Because you mean more to me than you know",
   "You are my safe place, my comfort",
   "And my favorite person 🥺",
-  "Look at us 💞",
-  "Bagguu, will you be my Valentine? ❤️"
+  "Look at us 💞"
 ];
 
 let i = 0;
@@ -146,20 +129,29 @@ function next() {
     document.getElementById("gallery").classList.remove("hidden");
   }
 
-  if (i < messages.length - 1) {
+  if (i < messages.length) {
     document.getElementById("text").innerText = messages[i];
     i++;
   } else {
-    document.getElementById("text").innerText = messages[i];
     document.getElementById("nextBtn").classList.add("hidden");
-    document.getElementById("finalBtns").classList.remove("hidden");
+    document.getElementById("gallery").classList.add("hidden");
+    document.getElementById("text").classList.add("hidden");
+    document.getElementById("valentineBox").classList.remove("hidden");
   }
 }
 
-function yes() {
-  document.getElementById("finalBtns").classList.add("hidden");
-  document.getElementById("text").classList.add("hidden");
-  document.getElementById("gallery").classList.add("hidden");
+function valYes() {
+  showFinal("So it’s a date 😍❤️<br><br>We are going to have the best sushi in the town 🍣<br>Hot & spicy just for me 😌🔥");
+}
+
+function valOnly() {
+  showFinal("I know you clicked ‘Only if you get me sushi’ 😌🍣<br><br>So we are going to have the best sushi in the town 💕<br>Hot & spicy just for me 🔥");
+}
+
+function showFinal(msg) {
+  document.getElementById("valentineBox").classList.add("hidden");
+  document.getElementById("hiddenMsg").innerHTML =
+    "<h1>" + msg + "<br><br>Always yours,<br>Ishani 💕</h1>";
   document.getElementById("hiddenMsg").classList.remove("hidden");
 }
 
