--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@ button:hover { transform: scale(1.05); }
 .hidden { display: none; }
 
 /* Gallery */
+.gallery {
+  margin-top: 15px;
+}
+
 .gallery img {
   width: 90px;
   height: 110px;
@@ -56,7 +60,8 @@ button:hover { transform: scale(1.05); }
   border-radius: 12px;
   margin: 5px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-}
+  animation: pop 0.6s ease;
+
 
 /* Hearts */
 .heart {
