--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@ body {
 
 .card {
   background: rgba(255,255,255,0.15);
-  padding: 30px 20px;
+  padding: 35px 25px;
   border-radius: 25px;
-  max-width: 380px;
-  width: 90%;
+  max-width: 350px;
   box-shadow: 0 15px 40px rgba(0,0,0,0.25);
   z-index: 2;
 }
@@ -34,48 +33,40 @@ h1 {
 }
 
 button {
-  margin-top: 15px;
-  padding: 12px 22px;
+  margin-top: 20px;
+  padding: 12px 26px;
   border-radius: 30px;
   border: none;
-  font-size: 15px;
+  font-size: 16px;
   cursor: pointer;
   background: #fff;
   color: #ff4f81;
   transition: 0.3s;
 }
 
-button:hover { transform: scale(1.05); }
+button:hover {
+  transform: scale(1.05);
+}
 
 .hidden { display: none; }
 
-/* GALLERY */
+/* Gallery */
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 12px;
   margin-top: 15px;
 }
 
-.pic {
-  width: 100%;
-  height: 150px;
+.gallery img {
+  width: 90px;
+  height: 110px;
   object-fit: cover;
-  border-radius: 16px;
-  box-shadow: 0 8px 18px rgba(0,0,0,0.35);
-  animation: fadeIn 0.8s ease forwards;
-  opacity: 0;
+  border-radius: 12px;
+  margin: 5px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  animation: pop 0.6s ease;
 }
 
-.pic:nth-child(1){animation-delay:0.1s;}
-.pic:nth-child(2){animation-delay:0.3s;}
-.pic:nth-child(3){animation-delay:0.5s;}
-.pic:nth-child(4){animation-delay:0.7s;}
-.pic:nth-child(5){animation-delay:0.9s;}
-.pic:nth-child(6){animation-delay:1.1s;}
-
-@keyframes fadeIn {
-  from { transform: scale(0.8); opacity: 0; }
+@keyframes pop {
+  from { transform: scale(0); opacity: 0; }
   to { transform: scale(1); opacity: 1; }
 }
 
@@ -98,28 +89,34 @@ button:hover { transform: scale(1.05); }
 <body>
 
 <div class="card">
-
   <h1 id="text">Hey Bagguu 👀</h1>
 
-  <div id="gallery" class="hidden">
-    <img class="pic" src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpeg">
-    <img class="pic" src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpeg">
-    <img class="pic" src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpeg">
-    <img class="pic" src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpeg">
-    <img class="pic" src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpeg">
-    <img class="pic" src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpeg">
-  </div>
+<div id="gallery" class="gallery hidden">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpeg">
+  <img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpeg">
+</div>
 
-  <div id="valentineBox" class="hidden">
-    <h1>You are my Valentine 💘</h1>
-    <button onclick="valYes()">Hell Yess 😍</button>
-    <button onclick="valOnly()">Only if you get me sushi 🍣😌</button>
-  </div>
 
   <button id="nextBtn" onclick="next()">Click here</button>
 
-  <div id="hiddenMsg" class="hidden"></div>
+  <div id="finalBtns" class="hidden">
+    <button onclick="yes()">YES 💖</button>
+  </div>
 
+  <div id="hiddenMsg" class="hidden">
+    <h1>
+      It’s a date 🥺❤️<br><br>
+      our date is ..<br>
+      for the best sushi 🍣<br>
+      and best of me 💫<br><br>
+      Always yours,<br>
+      Ishani 💕
+    </h1>
+  </div>
 </div>
 
 <audio id="music">
@@ -132,7 +129,8 @@ const messages = [
   "Because you mean more to me than you know",
   "You are my safe place, my comfort",
   "And my favorite person 🥺",
-  "Look at us 💞"
+  "Look at us 💞",
+  "Bagguu, will you be my Valentine? ❤️"
 ];
 
 let i = 0;
@@ -148,29 +146,20 @@ function next() {
     document.getElementById("gallery").classList.remove("hidden");
   }
 
-  if (i < messages.length) {
+  if (i < messages.length - 1) {
     document.getElementById("text").innerText = messages[i];
     i++;
   } else {
+    document.getElementById("text").innerText = messages[i];
     document.getElementById("nextBtn").classList.add("hidden");
-    document.getElementById("gallery").classList.add("hidden");
-    document.getElementById("text").classList.add("hidden");
-    document.getElementById("valentineBox").classList.remove("hidden");
+    document.getElementById("finalBtns").classList.remove("hidden");
   }
 }
 
-function valYes() {
-  showFinal("So it’s a date 😍❤️<br><br>We are going to have the best sushi in the town 🍣<br>Hot & spicy just for me 😌🔥");
-}
-
-function valOnly() {
-  showFinal("I know you clicked ‘Only if you get me sushi’ 😌🍣<br><br>So we are going to have the best sushi in the town 💕<br>Hot & spicy just for me 🔥");
-}
-
-function showFinal(msg) {
-  document.getElementById("valentineBox").classList.add("hidden");
-  document.getElementById("hiddenMsg").innerHTML =
-    "<h1>" + msg + "<br><br>Always yours,<br>Ishani 💕</h1>";
+function yes() {
+  document.getElementById("finalBtns").classList.add("hidden");
+  document.getElementById("text").classList.add("hidden");
+  document.getElementById("gallery").classList.add("hidden");
   document.getElementById("hiddenMsg").classList.remove("hidden");
 }
 
@@ -188,4 +177,3 @@ setInterval(() => {
 
 </body>
 </html>
-
