--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@ button:hover {
       for the best sushi 🍣<br>
       and best of me 💫<br><br>
       Always yours,<br>
-      Ishani 💕
+Ishani 💕<br><br>
+Get ready, hot, for the dinner…<br>
+and for me too 😉🔥
     </h1>
   </div>
 </div>
