--- a/index.html
+++ b/index.html
@@ -168,12 +168,29 @@ function valOnly() {
   showFinal("I know you clicked ‘Only if you take me to get best sushi & good food’ 😏🍣<br><br>SO we are going to have the best for US… THE BESTTT 💕🔥");
 }
 
+function valYes() {
+  showFinal("So it’s a date 😍❤️<br><br>We are going to have the BEST for us 😌🔥");
+}
+
+function valOnly() {
+  showFinal("I know you clicked ‘Only if you take me for sushi’ 😏🍣<br><br>SO we are going to have the best for US… THE BESTTT 💕🔥");
+}
+
 function showFinal(msg) {
   document.getElementById("finalBtns").classList.add("hidden");
   document.getElementById("text").classList.add("hidden");
   document.getElementById("gallery").classList.add("hidden");
-  document.getElementById("hiddenMsg").innerHTML = "<h1>" + msg + "<br><br>Always yours,<br>Ishani 💕</h1>";
+
+  document.getElementById("hiddenMsg").innerHTML =
+    "<h1>" + msg +
+    "<br><br><button onclick='reply()'>Reply to me 💬</button></h1>";
+
   document.getElementById("hiddenMsg").classList.remove("hidden");
+}
+
+function reply() {
+  window.open("https://wa.me/919727257013", "_blank");
+}
 }
 function reply() {
   window.open("https://wa.me/919727257013", "_blank");
