--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@ button:hover {
 
   <button id="nextBtn" onclick="next()">Click here</button>
 
-  <div id="finalBtns" class="hidden">
-  <h1>You are my Valentine 💘</h1>
+ <div id="finalBtns" class="hidden">
   <button onclick="valYes()">Hell Yess 😍</button>
-  <button onclick="valOnly()">Only if you take me to get best sushi & good food 🍣</button>
+  <button onclick="valOnly()">Only if you take me for sushi 🍣</button>
 </div>
   <div id="hiddenMsg" class="hidden">
     <h1>
