--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   height: 100vh;
-  background: linear-gradient(135deg, #ff758c, #ff7eb3);
+  background: linear-gradient(135deg, #12002f, #2b0033, #ff4f81);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,18 +19,19 @@ body {
 }
 
 .card {
-  background: rgba(255,255,255,0.15);
-  padding: 35px 25px;
-  border-radius: 25px;
-  max-width: 350px;
-  box-shadow: 0 0 25px rgba(255,255,255,0.4);
+  background: rgba(255,255,255,0.12);
+  padding: 40px 30px;
+  border-radius: 30px;
+  max-width: 360px;
+  box-shadow: 0 0 35px rgba(255,79,129,0.6);
+  backdrop-filter: blur(10px);
   animation: glow 3s infinite alternate;
   z-index: 2;
 }
 
 @keyframes glow {
-  from { box-shadow: 0 0 15px rgba(255,255,255,0.3); }
-  to { box-shadow: 0 0 35px rgba(255,255,255,0.7); }
+  from { box-shadow: 0 0 20px rgba(255,79,129,0.3); }
+  to { box-shadow: 0 0 45px rgba(255,79,129,0.9); }
 }
 
 h1 {
@@ -39,41 +40,36 @@ h1 {
 }
 
 button {
-  margin-top: 20px;
+  margin-top: 18px;
   padding: 12px 26px;
   border-radius: 30px;
   border: none;
   font-size: 16px;
   cursor: pointer;
-  background: #fff;
-  color: #ff4f81;
+  background: linear-gradient(135deg,#ff7eb3,#ff4f81);
+  color: #fff;
   transition: 0.3s;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.4);
 }
 
-button:hover {
-  transform: scale(1.1);
-}
+button:hover { transform: scale(1.1); }
 
 .hidden { display: none; }
 
 /* Gallery */
-.gallery {
-  margin-top: 15px;
-}
-
 .gallery img {
   width: 90px;
   height: 110px;
   object-fit: cover;
-  border-radius: 12px;
-  margin: 5px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  animation: pop 0.6s ease;
+  border-radius: 14px;
+  margin: 6px;
+  box-shadow: 0 6px 15px rgba(0,0,0,0.4);
+  animation: pop 0.7s ease;
 }
 
 @keyframes pop {
-  from { transform: scale(0); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
+  from { transform: scale(0) rotate(-10deg); opacity: 0; }
+  to { transform: scale(1) rotate(0); opacity: 1; }
 }
 
 /* Hearts */
@@ -83,29 +79,37 @@ button:hover {
   font-size: 20px;
   animation: float 6s linear infinite;
 }
-
 @keyframes float {
-  0% { transform: translateY(0); opacity: 1; }
-  100% { transform: translateY(-100vh); opacity: 0; }
+  to { transform: translateY(-100vh); opacity: 0; }
 }
 
-/* Sparkles */
-.sparkle {
+/* Confetti */
+.confetti {
   position: absolute;
+  top: -10px;
   font-size: 18px;
-  animation: sparkle 1.5s ease-out forwards;
+  animation: fall 3s linear forwards;
+}
+@keyframes fall {
+  to { transform: translateY(110vh) rotate(360deg); opacity: 0; }
 }
 
-@keyframes sparkle {
-  from { transform: scale(0) translateY(0); opacity: 1; }
-  to { transform: scale(1.5) translateY(-80px); opacity: 0; }
+/* Heartbeat */
+.heartbeat {
+  animation: beat 1s infinite;
+}
+@keyframes beat {
+  0%,100% { transform: scale(1); }
+  25% { transform: scale(1.1); }
+  50% { transform: scale(1); }
+  75% { transform: scale(1.15); }
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
+<div class="card" id="card">
   <h1 id="text">Hey Bagguu 👀</h1>
 
   <div id="gallery" class="gallery hidden">
@@ -141,76 +145,64 @@ const messages = [
   "Bagguu, will you be my Valentine? ❤️"
 ];
 
-let i = 0;
-let musicPlayed = false;
+let i = 0, musicPlayed=false;
 
-function next() {
-  if (!musicPlayed) {
-    document.getElementById("music").play();
-    musicPlayed = true;
-  }
-
-  if (i === 4) document.getElementById("gallery").classList.remove("hidden");
-
-  if (i < messages.length - 1) {
-    document.getElementById("text").innerText = messages[i++];
-  } else {
-    document.getElementById("text").innerText = messages[i];
-    document.getElementById("nextBtn").classList.add("hidden");
-    document.getElementById("finalBtns").classList.remove("hidden");
+function next(){
+  if(!musicPlayed){ music.play(); musicPlayed=true; }
+  if(i===4) gallery.classList.remove("hidden");
+  if(i<messages.length-1){ text.innerText=messages[i++]; }
+  else{
+    text.innerText=messages[i];
+    nextBtn.classList.add("hidden");
+    finalBtns.classList.remove("hidden");
   }
 }
 
-function valYes() {
-  sparkleBurst();
+function valYes(){
+  confettiRain();
   showFinal("So it’s a date 😍❤️<br><br>We are going to have the BEST for us 😌🔥");
 }
 
-function valOnly() {
-  sparkleBurst();
+function valOnly(){
+  card.classList.add("heartbeat");
   showFinal("I know you clicked ‘Only if you take me to get best sushi & good food’ 😏🍣<br><br>SO we are going to have the best for US… THE BESTTT 💕🔥");
 }
 
-function showFinal(msg) {
-  document.getElementById("finalBtns").classList.add("hidden");
-  document.getElementById("text").classList.add("hidden");
-  document.getElementById("gallery").classList.add("hidden");
-
-  document.getElementById("hiddenMsg").innerHTML =
-    "<h1>" + msg + "<br><br><button onclick='reply()'>Reply to me 💬</button></h1>";
-
-  document.getElementById("hiddenMsg").classList.remove("hidden");
+function showFinal(msg){
+  finalBtns.classList.add("hidden");
+  text.classList.add("hidden");
+  gallery.classList.add("hidden");
+  hiddenMsg.innerHTML="<h1>"+msg+"<br><br><button onclick='reply()'>Reply to me 💬</button></h1>";
+  hiddenMsg.classList.remove("hidden");
 }
 
-function reply() {
-  window.open("https://wa.me/919727257013", "_blank");
+function reply(){
+  window.open("https://wa.me/919727257013","_blank");
 }
 
-/* Sparkle burst */
-function sparkleBurst() {
-  for (let i = 0; i < 20; i++) {
-    const s = document.createElement("div");
-    s.className = "sparkle";
-    s.innerHTML = "✨";
-    s.style.left = Math.random() * 100 + "vw";
-    s.style.top = Math.random() * 100 + "vh";
-    document.body.appendChild(s);
-    setTimeout(() => s.remove(), 1500);
+/* Confetti */
+function confettiRain(){
+  for(let i=0;i<40;i++){
+    const c=document.createElement("div");
+    c.className="confetti";
+    c.innerHTML=["🎉","✨","💖","💫"][Math.floor(Math.random()*4)];
+    c.style.left=Math.random()*100+"vw";
+    document.body.appendChild(c);
+    setTimeout(()=>c.remove(),3000);
   }
 }
 
 /* Floating hearts */
-setInterval(() => {
-  const heart = document.createElement("div");
-  heart.className = "heart";
-  heart.innerHTML = "❤️";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = (15 + Math.random() * 20) + "px";
-  document.body.appendChild(heart);
-  setTimeout(() => heart.remove(), 6000);
-}, 300);
+setInterval(()=>{
+  const h=document.createElement("div");
+  h.className="heart";
+  h.innerHTML="❤️";
+  h.style.left=Math.random()*100+"vw";
+  h.style.fontSize=(15+Math.random()*20)+"px";
+  document.body.appendChild(h);
+  setTimeout(()=>h.remove(),6000);
+},300);
 </script>
 
 </body>
 </html>
-
